<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/favs" android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favourite" />
        <item android:id="@+id/randomWord" android:icon="@drawable/ic_toys_black_24dp"
            android:title="@string/random_wrd" />
        <!--<item android:id="@+id/atesoQuiz" android:icon="@drawable/note"
            android:title="@string/ateso_quiz"/>-->
        <item android:id="@+id/about_ateso" android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
        <item android:id="@+id/nav_share" android:icon="@drawable/ic_share_black"
            android:title="Share" />
        <item android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback_black"
            android:title="@string/action_feedback" />
</group>
<!--
        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" />

        <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->

</menu>