<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_black"
        android:text="Greeting"
        android:padding="10dp"
        android:textSize= "@dimen/quiz_word_size" />

    <ImageView
        android:id="@+id/audId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:contentDescription="@string/content_desc_audioicon"
        android:src="@drawable/audioicon" />

    <TextView
        android:id="@+id/hintId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Hint"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/text_black"
        android:padding="10dp"
        android:text="@string/meaning"
        android:textSize="15sp"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </RadioGroup>

        <Button
            android:id="@+id/continu"
            android:layout_margin="10dp"
            style="?android:attr/buttonStyleSmall"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/button_name_continue" />

    </LinearLayout>

    </ScrollView>