<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="@dimen/card_album_radius">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/section_frame"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/section_pic"
                android:src="@drawable/greet"
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_cover_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="fitXY"
                android:contentDescription="@string/section_image_description" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <TextView
                android:id="@+id/section_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/section_title_padding"
                android:paddingRight="@dimen/section_title_padding"
                android:paddingTop="@dimen/section_title_padding"
                android:textColor="@color/white"
                android:textSize="@dimen/section_title"
                android:text="Depression"/>
            <!--<TextView
                android:id="@+id/section_subititle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/section_name"
                android:paddingLeft="@dimen/section_title_padding"
                android:paddingRight="@dimen/section_title_padding"
                android:paddingTop="@dimen/section_title_padding"
                android:textColor="@color/section_title"
                android:textSize="@dimen/section_subtitle"
                android:text="Depression"/>-->
            </RelativeLayout>

        </FrameLayout>
        <RelativeLayout
            android:id="@+id/section_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/section_frame"
            android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/open_phrases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textSize="16sp"
            android:text="@string/open_phrases"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="40dp"
            android:paddingEnd="40dp"
            android:padding="10dp"
            android:textColor="@color/text_black" />

            <Button
                android:id="@+id/open_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="16sp"
                android:text="@string/start_quiz"
                android:clickable="true"
                android:focusable="true"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="40dp"
                android:paddingStart="40dp"
                android:paddingRight="20dp"
                android:paddingEnd="20dp"
                android:padding="10dp"
                android:textColor="@color/text_black" />

        </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>